cook : made a projects section with a fire animation

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,3 +3,11 @@
 :root {
   --font-inter: Inter, sans-serif;
 }
+
+/* .typed-cursor {
+  color: #ffff;
+  display: inline-block;
+  vertical-align: baseline;
+  font-size: inherit;
+  line-height: inherit;
+} */
